--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: test
-    environment: pypi
     permissions:
       contents: write
-      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -62,5 +60,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish to PyPI
+      # PyPI publish options:
+      # 1) API token (recommended for quick setup): add repository secret "PYPI_API_TOKEN"
+      # 2) Trusted Publishing (OIDC): configure PyPI trusted publisher for this repo/workflow
+      #
+      # We default to API token if present; otherwise we skip publishing to avoid a hard-fail.
+      - name: Publish to PyPI (API token)
+        if: ${{ secrets.PYPI_API_TOKEN != '' }}
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
+
+      - name: Publish to PyPI (skipped - not configured)
+        if: ${{ secrets.PYPI_API_TOKEN == '' }}
+        run: |
+          echo "PyPI publish skipped."
+          echo "To enable publishing, either:"
+          echo " - Add GitHub secret PYPI_API_TOKEN (PyPI API token), or"
+          echo " - Configure PyPI Trusted Publisher for gaebalai/CodeGraphMCPServer and workflow .github/workflows/release.yml"
